--- a/overlay/packages/apps/Updater/res/values/strings.xml
+++ b/overlay/packages/apps/Updater/res/values/strings.xml
@@ -21,5 +21,6 @@
           {type} - Build type
           {incr} - Incremental version
     -->
-    <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/ivanmeler/ota_provider/master/19.0/hero2lte.json</string>
+    <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/ivanmeler/ota_provider/master/19.1/hero2lte.json</string>
+    <string name="menu_changelog_url" translatable="false">https://github.com/ivanmeler/ota_provider/blob/master/19.1/universal8890.md</string>
 </resources>
