--- a/overlay/packages/apps/Updater/res/values/strings.xml
+++ b/overlay/packages/apps/Updater/res/values/strings.xml
@@ -22,5 +22,5 @@
           {incr} - Incremental version
     -->
     <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/ivanmeler/ota_provider/master/19.1/hero2lte.json</string>
-    <string name="menu_changelog_url" translatable="false">https://github.com/ivanmeler/ota_provider/blob/master/19.1/universal8890.md</string>
+    <string name="menu_changelog_url" translatable="false">https://ivanmeler.github.io/changes/hero2lte.html</string>
 </resources>
